# snap-my-docs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
src/: args.rs  lib.rs  main.rs
src/cmd/: generate.rs  init.rs  mod.rs
