[package]
name = "smd"
description = "A CLI tool to generate README from a JSON file"
authors = ["Gibran Badrul <gibraaan.cloud@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gibranbadrul/snap-my-docs"
keywords = ["binary", "smd", "snap-my-docs", "readme"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
include = [
  "src/**/*",
  "Cargo.*",
  "LICENSE*",
  "README.md",
  "CHANGELOG.md",
]
 
[dependencies]
clap = { version = "4.5.27", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.5.42"
clap_mangen = "0.2.26"
anyhow = "1.0.97"